# pdfium-lib

./: .editorconfig  .gitignore  .travis.yml  CLAUDE.md  HOW_TO_INCLUDE_FILES.md  LICENSE.md  Makefile  README.md  make.py  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: android.yml  ios.yml  macos.yml  wasm.yml  windows.yml
.github/workflows-bkp/: cheerp.yml  macos.yml  wasm.yml
docker/android/: Dockerfile
docker/cheerp/: Dockerfile
docker/wasm/: Dockerfile
docs/: BUILD_ANDROID.md  BUILD_CHEERP.md  BUILD_IOS.md  BUILD_MACOS.md  BUILD_WASM.md  BUILD_WINDOWS.md
extras/wasm/config/: Doxyfile
extras/wasm/doxygen/: Doxyfile
extras/wasm/node/: index.js  package.json  webpack.config.js
extras/wasm/template/: README.md  index.html
extras/wasm/utils/: avail.c  custom.c  custom.cpp  function-names.js  package.json  pdfium.rsp  pre-js.js
modules/: android.py  cheerp.py  common.py  config.py  functions.py  ios.py  macos.py  patch.py  pdfium.py  wasm.py  windows.py
patchs/: .gn_modified  .gn_original  BUILD_modified.gn  BUILD_original.gn  apple-int.patch  apple_int_modified.h  build-fxge.patch  build-override.patch  build.patch  build_fxge_modified.gn  build_overrides_modified.gni  cfx_fontmapper_modified.cpp  cpdf_streamparser_modified.cpp  cpdf_syntax_parser_modified.cpp  filter-libtool.patch  filter_libtool_modified.py  find-sdk.patch  find_sdk_modified.py  font-mapper.patch  fx-system.patch  fx_system_modified.h  gn.patch  ios.patch  libjpeg-turbo.patch  libjpeg_turbo_original.gn  sdk-info.patch  sdk_info_modified.py  stream-parser.patch  syntax-parser.patch  toolchain.patch  toolchain_modified.gni
sample/: CMakeLists.txt
sample-apple/: .gitignore
sample-apple/Sample/: AppDelegate.swift  Sample-Bridging-Header.h  ViewController.swift
sample-apple/Sample.xcodeproj/: project.pbxproj
sample-apple/Sample.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
sample-apple/Sample.xcodeproj/xcshareddata/xcschemes/: Sample.xcscheme
sample-apple/Sample/PDFium/: PDFiumDocument.h  PDFiumDocument.m  PDFiumPage.h  PDFiumPage.m  VDPDFDocument.swift  VDPDFPage.swift
sample-apple/SampleMac/: AppDelegate.swift  Info.plist  ViewController.swift
sample-apple/SampleMac/Base.lproj/: Main.storyboard
sample-wasm/src/: main.cpp
sample/include/: fpdf_edit.h  fpdfview.h
sample/src/: main.cpp
tests/: conftest.py  test_setup_validation.py
